--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <h1>Ola Mundo do vscode!</h1>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. In ipsa voluptatem, repellendus nisi sit fuga eligendi voluptate officia excepturi repudiandae assumenda fugit aspernatur reiciendis sequi vero nihil delectus illo sed.</p>
+    <h2>Atualizacao dessa branch nova (feature2.0)</h2>
 </body>
 </html>
